<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/_10sdp"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <mohammad.financialsreport.customViews.MyEditText
        android:hint="@string/username"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <mohammad.financialsreport.customViews.MyEditText
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <mohammad.financialsreport.customViews.MyButton
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <mohammad.financialsreport.customViews.MyTextView
        android:textSize="@dimen/_15ssp"
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>